// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user1 connects user1 added to story1 Broadcasts the correct changes to user1 1`] = `
Object {
  "createdAt": "2020-02-01T00:04:00.000Z",
  "id": "1",
  "payload": Object {
    "activeSession": null,
    "activeUsers": Array [],
    "connectedUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
    ],
    "dateCreated": "2020-02-01T00:02:00.000Z",
    "dateModified": "2020-02-01T00:03:00.000Z",
    "id": "story1",
    "lastSession": null,
    "version": 2,
  },
  "type": "STORY_CHANGED",
}
`;

exports[`user1 connects user1 added to story1 user2 connects user2 added to story1 Broadcasts the correct changes to user2 1`] = `
Object {
  "createdAt": "2020-02-01T00:08:00.000Z",
  "id": "3",
  "payload": Object {
    "activeSession": null,
    "activeUsers": Array [],
    "connectedUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
      Object {
        "dateAdded": "2020-02-01T00:05:00.000Z",
        "dateModified": "2020-02-01T00:05:00.000Z",
        "id": "user2",
        "name": null,
        "version": 0,
      },
    ],
    "dateCreated": "2020-02-01T00:02:00.000Z",
    "dateModified": "2020-02-01T00:06:00.000Z",
    "id": "story1",
    "lastSession": null,
    "version": 3,
  },
  "type": "STORY_CHANGED",
}
`;

exports[`user1 connects user1 added to story1 user2 connects user2 added to story1 user1 becomes active on story1 Broadcasts the correct changes to user2 1`] = `
Object {
  "createdAt": "2020-02-01T00:11:00.000Z",
  "id": "5",
  "payload": Object {
    "activeSession": null,
    "activeUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
    ],
    "connectedUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
      Object {
        "dateAdded": "2020-02-01T00:05:00.000Z",
        "dateModified": "2020-02-01T00:05:00.000Z",
        "id": "user2",
        "name": null,
        "version": 0,
      },
    ],
    "dateCreated": "2020-02-01T00:02:00.000Z",
    "dateModified": "2020-02-01T00:09:00.000Z",
    "id": "story1",
    "lastSession": null,
    "version": 4,
  },
  "type": "STORY_CHANGED",
}
`;

exports[`user1 connects user1 added to story1 user2 connects user2 added to story1 user1 becomes active on story1 user2 becomes active on story1 Broadcasts the correct changes to user2 1`] = `
Object {
  "createdAt": "2020-02-01T00:14:00.000Z",
  "id": "7",
  "payload": Object {
    "activeSession": null,
    "activeUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
      Object {
        "dateAdded": "2020-02-01T00:05:00.000Z",
        "dateModified": "2020-02-01T00:05:00.000Z",
        "id": "user2",
        "name": null,
        "version": 0,
      },
    ],
    "connectedUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
      Object {
        "dateAdded": "2020-02-01T00:05:00.000Z",
        "dateModified": "2020-02-01T00:05:00.000Z",
        "id": "user2",
        "name": null,
        "version": 0,
      },
    ],
    "dateCreated": "2020-02-01T00:02:00.000Z",
    "dateModified": "2020-02-01T00:12:00.000Z",
    "id": "story1",
    "lastSession": null,
    "version": 5,
  },
  "type": "STORY_CHANGED",
}
`;

exports[`user1 connects user1 added to story1 user2 connects user2 added to story1 user1 becomes active on story1 user2 becomes active on story1 Broadcasts the correct changes to user2 2`] = `
Object {
  "createdAt": "2020-02-01T00:19:00.000Z",
  "id": "10",
  "payload": Object {
    "activeSession": Object {
      "dateModified": "2020-02-01T00:15:00.000Z",
      "dateStarted": "2020-02-01T00:15:00.000Z",
      "dateWillFinish": "2020-02-01T00:15:21.000Z",
      "entries": Array [],
      "finalEntry": "",
      "id": "8",
      "user": Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
      "version": 0,
    },
    "activeUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
      Object {
        "dateAdded": "2020-02-01T00:05:00.000Z",
        "dateModified": "2020-02-01T00:05:00.000Z",
        "id": "user2",
        "name": null,
        "version": 0,
      },
    ],
    "connectedUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
      Object {
        "dateAdded": "2020-02-01T00:05:00.000Z",
        "dateModified": "2020-02-01T00:05:00.000Z",
        "id": "user2",
        "name": null,
        "version": 0,
      },
    ],
    "dateCreated": "2020-02-01T00:02:00.000Z",
    "dateModified": "2020-02-01T00:17:00.000Z",
    "id": "story1",
    "lastSession": null,
    "version": 7,
  },
  "type": "STORY_CHANGED",
}
`;

exports[`user1 connects user1 added to story1 user2 connects user2 added to story1 user1 becomes active on story1 user2 becomes active on story1 user1 disconnects Broadcasts the correct changes to user2 1`] = `
Object {
  "createdAt": "2020-02-01T00:24:00.000Z",
  "id": "11",
  "payload": Object {
    "activeSession": Object {
      "dateModified": "2020-02-01T00:15:00.000Z",
      "dateStarted": "2020-02-01T00:15:00.000Z",
      "dateWillFinish": "2020-02-01T00:15:21.000Z",
      "entries": Array [],
      "finalEntry": "",
      "id": "8",
      "user": Object {
        "dateAdded": "2020-02-01T00:22:00.000Z",
        "dateModified": "2020-02-01T00:23:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
      "version": 0,
    },
    "activeUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:05:00.000Z",
        "dateModified": "2020-02-01T00:05:00.000Z",
        "id": "user2",
        "name": null,
        "version": 0,
      },
    ],
    "connectedUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:05:00.000Z",
        "dateModified": "2020-02-01T00:05:00.000Z",
        "id": "user2",
        "name": null,
        "version": 0,
      },
    ],
    "dateCreated": "2020-02-01T00:02:00.000Z",
    "dateModified": "2020-02-01T00:21:00.000Z",
    "id": "story1",
    "lastSession": null,
    "version": 9,
  },
  "type": "STORY_CHANGED",
}
`;

exports[`user1 connects user1 added to story1 user2 connects user2 added to story1 user1 becomes active on story1 user2 becomes active on story1 user2 disconnects Broadcasts the correct changes to user1 1`] = `
Object {
  "createdAt": "2020-02-01T00:22:00.000Z",
  "id": "11",
  "payload": Object {
    "activeSession": Object {
      "dateModified": "2020-02-01T00:15:00.000Z",
      "dateStarted": "2020-02-01T00:15:00.000Z",
      "dateWillFinish": "2020-02-01T00:15:21.000Z",
      "entries": Array [],
      "finalEntry": "",
      "id": "8",
      "user": Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
      "version": 0,
    },
    "activeUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
    ],
    "connectedUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
    ],
    "dateCreated": "2020-02-01T00:02:00.000Z",
    "dateModified": "2020-02-01T00:21:00.000Z",
    "id": "story1",
    "lastSession": null,
    "version": 9,
  },
  "type": "STORY_CHANGED",
}
`;

exports[`user1 connects user1 added to story1 user2 connects user2 added to story1 user1 disconnects Broadcasts the correct changes to user2 1`] = `
Object {
  "createdAt": "2020-02-01T00:11:00.000Z",
  "id": "4",
  "payload": Object {
    "activeSession": null,
    "activeUsers": Array [],
    "connectedUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:05:00.000Z",
        "dateModified": "2020-02-01T00:05:00.000Z",
        "id": "user2",
        "name": null,
        "version": 0,
      },
    ],
    "dateCreated": "2020-02-01T00:02:00.000Z",
    "dateModified": "2020-02-01T00:10:00.000Z",
    "id": "story1",
    "lastSession": null,
    "version": 5,
  },
  "type": "STORY_CHANGED",
}
`;
